[tool.poetry]
name = "gymnasium-demo"
version = "0.1.0"
description = ""
authors = ["Dimitar Gueorguiev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
gymnasium = {extras = ["classic-control"], version = "^1.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
